Usuários entrando na sala

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <ion-icon name="people-outline"></ion-icon>
     </div>
 
-    <div class="conversas">
-        <ul>
+    
+        <ul class="conversas">
             <li>João entrou na sala</li>
         </ul>
-    </div>
+    
 
     <div class="mensagens">
         <input type="text" placeholder="Escreva aqui...">
