manter o usuário online e mais atualizações de layout

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
 <div class="conteudo">
     <div class="topo">
-        <ion-icon name="nutrition-outline"></ion-icon>
-        <ion-icon name="people-outline"></ion-icon>
+        <img src="logo 1.png" alt="">
+        <img src="Vector.png" alt="">
     </div>
 
     
